[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://textures/bg.png" type="Texture" id=2]
[ext_resource path="res://textures/heart.png" type="Texture" id=3]
[ext_resource path="res://fonts/default.font.tres" type="DynamicFont" id=4]
[ext_resource path="res://head.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 89.7312, 1501.17 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="viewport_box" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="viewport" type="Viewport" parent="viewport_box"]
size = Vector2( 1920, 1080 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="texture" type="TextureRect" parent="bg"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 9
texture = ExtResource( 2 )

[node name="life_sprite" type="Sprite" parent="bg"]
position = Vector2( 93, 95 )
texture = ExtResource( 3 )

[node name="life_counter" type="Label" parent="bg"]
margin_left = 175.0
margin_top = 66.0
margin_right = 228.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 4 )
text = "3"

[node name="time_counter" type="Label" parent="bg"]
margin_left = 1764.34
margin_top = 66.0
margin_right = 1883.34
margin_bottom = 107.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 4 )
text = "12:24"
align = 2

[node name="walls" type="Node2D" parent="."]

[node name="wall" type="Area2D" parent="walls"]
editor/display_folded = true
position = Vector2( -225.066, 506.398 )
collision_layer = 128
collision_mask = 128

[node name="shape" type="CollisionShape2D" parent="walls/wall"]
shape = SubResource( 1 )

[node name="wall2" type="Area2D" parent="walls"]
editor/display_folded = true
position = Vector2( 2122.05, 514.436 )
collision_layer = 128
collision_mask = 128

[node name="shape" type="CollisionShape2D" parent="walls/wall2"]
shape = SubResource( 1 )

[node name="wall3" type="Area2D" parent="walls"]
editor/display_folded = true
position = Vector2( 980.644, 1286.09 )
rotation = 1.5708
collision_layer = 128
collision_mask = 128

[node name="shape" type="CollisionShape2D" parent="walls/wall3"]
shape = SubResource( 1 )

[node name="wall4" type="Area2D" parent="walls"]
position = Vector2( 980.644, -233.104 )
rotation = 1.5708
collision_layer = 524288
collision_mask = 524288

[node name="shape" type="CollisionShape2D" parent="walls/wall4"]
shape = SubResource( 1 )

[node name="budha" parent="." instance=ExtResource( 5 )]
position = Vector2( 960, 690 )
